--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ compile_sass = true
 build_search_index = false
 
 
-theme = "zola-theme-course"
+
 
 [markdown]
 # Whether to do syntax highlighting
@@ -22,5 +22,6 @@ icon = "image.png"
 icon_desc = "Icon of the course"
 description = "A great course!"
 illus = "vt.png"
+default_illus = "vt.png"
 primary_color = "#033802"
 accent_color = "#ffffff"
