--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "pagecrypt": "^6.1.1"
   },
   "scripts": {
-    "serve": "pagecrypt templates/rsvp_raw.html templates/rsvp.html password && zola serve"
+    "serve": "zola serve",
+    "build": "zola build"
   }
 }
